Prevent horizontal scroll on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -276,9 +276,10 @@
   html,
   body {
     width: 100%;
+    @apply overflow-x-hidden;
   }
   body {
-    @apply bg-background text-foreground overflow-x-hidden;
+    @apply bg-background text-foreground;
   }
   input,
   select,
